--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">MyFirstApp</string>
+    <string name="hello_big_world">Hello big World!</string>
+    <string name="bienvenue">Bienvenue</string>
+    <string name="button">Button</string>
+    <string name="fleur">TODO</string>
+    <string name="_0">0</string>
+    <string name="Button1">Button</string>
+    <string name="Button2">Button</string>
+    <string name="Button3">Button</string>
+    <string name="Toast">Toast</string>
+    <string name="Count">Count</string>
+    <string name="Random">Random</string>
+    <string name="truc2">TODO</string>
 </resources>
