--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="Count">Count</string>
     <string name="Random">Random</string>
     <string name="truc2">TODO</string>
+    <string name="random_heading">Here a number \n between 0 and %1d</string>
+    <string name="n">N</string>
+    <string name="r">R</string>
 </resources>
